describe your changes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The UX Review Blog</title>
+    <meta name="author" content="Ibrahim Elsarawy – Front-End Developer">
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -415,7 +416,7 @@
 
                 <div class="line"></div>
                 <div class="copy">
-                    <p>&copy; 2025 The UX Review. ALL RIGHTS RESERVED. STAY BRUTAL.</p>
+                    <p>&copy; 2025 The UX Review. <span class="ibrahim">Ibrahim Elsarawy</span> ALL RIGHTS RESERVED. STAY BRUTAL.</p>
                     <div class="links">
                         <a href="">PRIVACY POLICY</a>
                         <a href="">TERMS OF USE</a>
